<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tic Tac Toe</string>
    <string name="help_message">Be the first to get three in a row! This multiplayer game is displayed on a 3 by 3 game board. One player is X, the other O. players alternate placing their X or O on one of the empty fields. The game ends when one player gets three in a row or when there is no empty fields left, in which case the game ends in a tie,</string>
    <string name="button_goBack">Go back</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="new_game">New Game</string>
    <string name="clear_score">Clear Score</string>
    <string name="help">help</string>
    <string name="bg_colors">Background Color</string>
    <string name="line_colors">Line Color</string>
    <string name="x_colors">X Marker Color</string>
    <string name="o_colors">O Marker Color</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="options_s">Options</string>

    <string-array name="colors_array">
        <item>White</item>
        <item>Black</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
    </string-array>

</resources>