<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/bg_color"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/line_color"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/bg_color"
        android:layout_below="@+id/bg_color" />

    <Spinner
        android:id="@+id/o_color"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/line_color"
        android:layout_below="@+id/line_color" />

    <Spinner
        android:id="@+id/x_color"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/o_color"
        android:layout_below="@+id/o_color" />

    <TextView
        android:id="@+id/bg_colort"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_above="@+id/line_color"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="18dp"
        android:text="@string/bg_colors"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/line_colort"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/line_color"
        android:layout_alignLeft="@+id/bg_colort"
        android:text="@string/line_colors"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/o_colort"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_above="@+id/x_color"
        android:layout_alignLeft="@+id/line_colort"
        android:text="@string/o_colors"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/x_colort"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/x_color"
        android:layout_alignLeft="@+id/o_colort"
        android:text="@string/x_colors"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/cancel_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/ok_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancel_btn"
        android:layout_alignBottom="@+id/cancel_btn"
        android:layout_toLeftOf="@+id/cancel_btn"
        android:text="@string/ok" />

</RelativeLayout>